US7373 - Host view Fix the layout of the pin-details dark background so it shows corrently on mobile.

--- a/src/styles/pages/_pin-details.scss
+++ b/src/styles/pages/_pin-details.scss
@@ -1,8 +1,13 @@
 .pin-details-dark {
   background: rgba($cr-black, .9);
   color: $cr-gray-light;
-  margin: -1rem -2rem 0;
+  margin: -16px -15px;
   padding: 2rem;
+
+  @media (min-width: $screen-tablet) {
+    margin-left: -2rem;
+    margin-right: -2rem;
+  }
 
   hr,
   .border-top,
